# librarian-mcp

./: CHANGELOG.md  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
preload/: README.md  r9v2_base.md
preload/architecture/: ip_load_balancing.md  medallion_sponsorship.md  pedestal_stake.md  pledge_structure.md
preload/benchmark/: 75q_bank_overview.md  eyewitness_results_b111.md  grading_rubric.md  posture_disclosure.md  r9_technical_brief.md
preload/canonical/: canonical_laws_and_frameworks.md  canonical_values.yaml
preload/founder_voice/: anachronism_principle.md  cloyd_pattern.md  pine_books_anchor.md  rhetorical_keystones.md  three_clock_timeline.md
preload/outreach/: cephas_registry.md  glass_door_protocol.md  letter_dispatch_queue_summary_STUB.md  opening_gambit_v2.md  witness_program.md
scripts/: pull_launch_metrics.py
src/librarian_mcp/: __init__.py  cli.py  context.py  hosted.py  metrics.py  server.py
tests/: conftest.py  test_context.py  test_metrics.py  test_provenance.py
